always show vertical scrollbar to prevent for the shaking of content when modal shows

--- a/app/styles/waterDrop/main.less
+++ b/app/styles/waterDrop/main.less
@@ -13,6 +13,10 @@
 @import "mod-feedback.less";
 @import "mod-animate.less";
 
+html {
+	// Always show vertical scrollbar to prevent for the shaking of content when modal shows
+	overflow-y: scroll;
+}
 .load-mask {
 	position: absolute;
 	width: 100%;
